# fake_path_publisher

./: CMakeLists.txt  package.xml
config/: default.yaml
launch/: launch.py
src/: fake_lidar_pub.cpp  fake_path_pub.cpp
